fix word-wrap

--- a/css/default.css
+++ b/css/default.css
@@ -81,9 +81,9 @@ pre ol{margin-left:25px;list-style-type:decimal;}
 }
 .entry ul{margin-bottom:25px;margin-left:25px;}
 .entry p+ul {margin-top:-20px;}
-.entry ul li{margin-bottom:5px;list-style:disc;line-height:1.8em;}
+.entry ul li{margin-bottom:5px;list-style:disc;line-height:1.8em;word-wrap: break-word;}
 .entry ol{margin-bottom:25px;margin-left:25px;}
-.entry ol li{margin-bottom:5px;list-style:decimal;line-height:1.8em;}
+.entry ol li{margin-bottom:5px;list-style:decimal;line-height:1.8em;word-wrap: break-word;}
 .entry blockquote{margin-left:25px;font-size:14px;font-style:italic}
 .entry img{max-width:670px;display:block;margin:10px auto;}
 
